# jazz2-vita

./: CMakeLists.txt
Sources/: Common.h
Sources/nCine/: CommonHeaders.h
